[gd_scene load_steps=16 format=3 uid="uid://d7ppjuy2f235"]

[ext_resource type="PackedScene" uid="uid://4g4bbie5hpps" path="res://addons/snowball_framework/source/scenes/entity/state_controller.tscn" id="1"]
[ext_resource type="Script" path="res://addons/snowball_framework/source/scripts/entity/camera/CameraStateLook.gd" id="2"]
[ext_resource type="Script" path="res://addons/snowball_framework/source/scripts/entity/camera/CameraStateOrbi.gd" id="3"]
[ext_resource type="Script" path="res://addons/snowball_framework/source/scripts/entity/camera/CameraStateTarg.gd" id="4"]
[ext_resource type="Script" path="res://addons/snowball_framework/source/scripts/entity/camera/CameraStateIsom.gd" id="5"]
[ext_resource type="Script" path="res://addons/snowball_framework/source/scripts/entity/camera/Camera.gd" id="6"]
[ext_resource type="Script" path="res://addons/snowball_framework/source/scripts/entity/camera/CameraStateVehi.gd" id="7"]
[ext_resource type="Script" path="res://addons/snowball_framework/source/scripts/entity/camera/CameraStateFree.gd" id="8"]
[ext_resource type="Script" path="res://addons/snowball_framework/source/scripts/entity/camera/CameraStateLock.gd" id="9"]

[sub_resource type="SphereShape3D" id="4"]

[sub_resource type="Animation" id="1"]
resource_name = "BarsAppear"
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasCamera/BarTop:scale:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(),
"points": PackedFloat32Array(),
"times": PackedFloat32Array()
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasCamera/BarBottom:scale:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(),
"points": PackedFloat32Array(),
"times": PackedFloat32Array()
}

[sub_resource type="Animation" id="2"]
resource_name = "BarsDisappear"
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasCamera/BarTop:scale:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(),
"points": PackedFloat32Array(),
"times": PackedFloat32Array()
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasCamera/BarBottom:scale:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(),
"points": PackedFloat32Array(),
"times": PackedFloat32Array()
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_d868j"]
_data = {
"BarsAppear": SubResource("1"),
"BarsDisappear": SubResource("2")
}

[sub_resource type="Animation" id="3"]
resource_name = "Wobble"
length = 7.5
loop_mode = 1
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../CameraLens:rotation_degrees:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(),
"points": PackedFloat32Array(),
"times": PackedFloat32Array()
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../CameraLens:rotation_degrees:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(),
"points": PackedFloat32Array(),
"times": PackedFloat32Array()
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../CameraLens:rotation_degrees:z")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(),
"points": PackedFloat32Array(),
"times": PackedFloat32Array()
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_toqc2"]
_data = {
"Wobble": SubResource("3")
}

[node name="Camera3D" type="RigidBody3D"]
collision_layer = 2
collision_mask = 12
script = ExtResource("6")

[node name="StateController" parent="." instance=ExtResource("1")]

[node name="Free" type="Node" parent="StateController"]
script = ExtResource("8")

[node name="Orbi" type="Node" parent="StateController"]
script = ExtResource("3")

[node name="Targ" type="Node" parent="StateController"]
script = ExtResource("4")

[node name="Isom" type="Node" parent="StateController"]
script = ExtResource("5")

[node name="Look" type="Node" parent="StateController"]
script = ExtResource("2")

[node name="Vehi" type="Node" parent="StateController"]
script = ExtResource("7")

[node name="Lock" type="Node" parent="StateController"]
script = ExtResource("9")

[node name="CameraLens" type="Camera3D" parent="."]
transform = Transform3D(0.999994, 0, 0.00349065, 0, 1, 0, -0.00349065, 0, 0.999994, 0, 0, 0)
fov = 60.0
near = 0.01
far = 8192.0

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("4")

[node name="Animation" type="Node" parent="."]

[node name="AnimationCam" type="Tween" parent="Animation"]
_import_path = NodePath("")
unique_name_in_owner = false
process_mode = 0
process_priority = 0
process_physics_priority = 0
process_thread_group = 0
editor_description = ""
playback_process_mode = 0
script = null

[node name="AnimationBars" type="AnimationPlayer" parent="Animation"]
libraries = {
"": SubResource("AnimationLibrary_d868j")
}

[node name="AnimationWobble" type="AnimationPlayer" parent="Animation"]
callback_mode_process = 0
libraries = {
"": SubResource("AnimationLibrary_toqc2")
}

[node name="CanvasCamera" type="CanvasLayer" parent="Animation"]

[node name="BarTop" type="ColorRect" parent="Animation/CanvasCamera"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 96.0
grow_horizontal = 2
scale = Vector2(1, 1e-05)
color = Color(0, 0, 0, 1)

[node name="BarBottom" type="ColorRect" parent="Animation/CanvasCamera"]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -86.0
offset_bottom = 10.0
grow_horizontal = 2
scale = Vector2(1, 1e-05)
pivot_offset = Vector2(0, 96)
color = Color(0, 0, 0, 1)
